# homebudget

./: .env.sample  .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/prompts/: plan-wrapper-design.prompt.md  plan-wrapper-implementation.prompt.md
.github/workflows/: release.yml
.scripts/bash/: setup-env.sh
.scripts/cmd/: setup-env.cmd
api-examples/: index.html
cli-examples/: index.html
cli-guide/: index.html
config/: README.md  hb-config.json.sample
configuration/: index.html
dependencies/: index.html
design/: index.html
developer-guide/: index.html
docs/: api-examples.md  cli-examples.md  cli-guide.md  configuration.md  currency-matching-rules.md  dependencies.md  design.md  developer-guide.md  forex-rates.md  homebudget.md  index.md  issues.md  methods.md  plan-wrapper-design-step2.md  plan-wrapper-design-step3.md  repository-layout.md  sqlite-schema.md  sync-update.md  test-cases.md  test-guide.md  test-strategy.md  transfer-currency-normalization.md  user-guide.md  workflow.md
docs/issues/: 001-sync-detection-diagnostics.md  001-sync-detection.md  002-DELETE-QUICK-CHECKLIST.md  002-delete-sync-diagnostics.md  003-sync-exp-update-amt.md
docs/tests/: BATCH_TRANSFER_TEST_CASES.md  TRANSFER_TEST_CASES.md  feature-account-list.md  feature-category-list.md  feature-subcategory-list.md  feature_5.1_expense_crud.md  feature_5.3_transfer_crud.md  sync_validation_procedure.md
forex-rates/: index.html
issues/: index.html
methods/: index.html
repository-layout/: index.html
search/: search_index.json
sqlite-schema/: index.html
sync-update/: index.html
test-cases/: index.html
test-guide/: index.html
test-strategy/: index.html
tests/: conftest.py  forex-rates.json.sample  schema.json
tests/BATCH_TRANSFER_TEST_CASES/: index.html
tests/Forex/: forex-rates.json
tests/TRANSFER_TEST_CASES/: index.html
tests/feature-account-list/: index.html
tests/feature-category-list/: index.html
tests/feature-subcategory-list/: index.html
tests/feature_5.1_expense_crud/: index.html
tests/feature_5.3_transfer_crud/: index.html
tests/fixtures/: batch_expenses.csv  batch_income.json  batch_transfers.csv  empty_database.db
tests/integration/: test_balance.py  test_batch_operations.py  test_cli_balance.py  test_cli_reference_lists.py  test_currency_constraints.py  test_expense_crud.py  (+7 more)
transfer-currency-normalization/: index.html
user-guide/: index.html
workflow/: index.html
(+72 files in other folders)
