[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebudget"
version = "0.1.0-dev"
description = "HomeBudget SQLite wrapper and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "HomeBudget contributors"}]
dependencies = [
  "click>=8.1.0",
]

[project.scripts]
homebudget = "homebudget.cli.main:main"
hb = "homebudget.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.black]
line-length = 88

target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra --cov=homebudget --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
  "sit: system integration tests without UI or sync services",
  "uat: user acceptance tests with HomeBudget UI verification",
]
