[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebudget"
dynamic = ["version"]
description = "HomeBudget SQLite wrapper and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "HomeBudget contributors"}]
dependencies = [
  "click>=8.1.0",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mkdocs>=1.5.0,<2.0",
  "mkdocs-material>=9.0.0,<10.0",
]

[project.scripts]
homebudget = "homebudget.cli.main:main"
hb = "homebudget.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.black]
line-length = 88

target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra --cov=homebudget --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
  "sit: system integration tests without UI or sync services",
  "uat: user acceptance tests with HomeBudget UI verification",
]
